Added AdminQuoteComponent to display single quote in admin

--- a/src/app/core/quoter/quoter.component.html
+++ b/src/app/core/quoter/quoter.component.html
@@ -48,8 +48,7 @@
               'is-invalid': !description.valid && description.touched,
               'is-valid': description.valid && description.touched
             }"
-          >
-          </textarea>
+          ></textarea>
           
           <div class="invalid-feedback">
             Description must be at least 100 characters.
