--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <table class="table table-bordered table-dark">
+    <table class="table table-bordered table-hover">
         <thead>
           <tr>
             <th>Email</th>
@@ -12,7 +12,7 @@
         </thead>
       
         <tbody>
-          <tr *ngFor="let quote of quotes">
+          <tr *ngFor="let quote of quotes" [routerLink]="['quote', quote._id]">
             <td>{{ quote.email }}</td>
         
             <td>{{ quote.description }}</td>
