--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,23 +1,35 @@
 <div class="container">
   <div class="row">
-    <table class="table table-bordered table-hover">
+    <table class="table table-striped table-hover col">
         <thead>
           <tr>
-            <th>Email</th>
-          
-            <th>Description</th>
+            <th scope="col">Email</th>
 
-            <th>Submitted</th>
+            <th scope="col">Status</th>
+
+            <th scope="col">Last Active</th>
           </tr>
         </thead>
       
         <tbody>
-          <tr *ngFor="let quote of quotes" [routerLink]="['quote', quote._id]">
-            <td>{{ quote.email }}</td>
-        
-            <td>{{ quote.description }}</td>
+          <tr 
+            *ngFor="let quote of quotes" 
+            [routerLink]="['quote', quote._id]"
+            [ngClass]="{
+              'table-success': quote.status === 'new',
+              'table-warning': quote.status === 'pending',
+              'table-danger' : quote.status === 'canceled'
+            }"
+          >
+            <td>
+              <a href="mailto:{{ quote.email }}">
+                {{ quote.email }}
+              </a>
+            </td>
 
-            <td></td>
+            <td>{{ quote.status | titlecase }}</td>
+
+            <td>{{ quote.updatedAt | date:'short' }}</td>
           </tr>
         </tbody>
       </table>
