--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -1,5 +1,13 @@
 table {
-  tr:hover{
-    cursor: pointer;
+  table-layout: fixed;
+
+  tr {
+    &:hover {
+      cursor: pointer;
+    }
+
+    td {
+      word-wrap: break-word;
+    }
   }
 }
