Changed patch to put in quote service

--- a/src/app/admin/admin-quote/admin-quote.component.html
+++ b/src/app/admin/admin-quote/admin-quote.component.html
@@ -24,6 +24,7 @@
             placeholder="Enter Reply..."
             required
             minlength="100"
+            [(ngModel)]="comment.message"
           ></textarea>
           
           <div class="invalid-feedback">
