--- a/src/app/shared/comment/comment.component.html
+++ b/src/app/shared/comment/comment.component.html
@@ -1,10 +1,37 @@
-<p class="text-center">{{ comment.updatedAt | date:'short' }}</p>
+<div class="row">
+  <div class="col-12">
+    <p 
+      class="text-center"
+      [style.fontSize]="size"
+    >
+      {{ comment.updatedAt | date:'short' }}
+    </p>
+  </div>
+</div>
 
-<blockquote 
-  class="blockquote p-4 my-4 rounded shadow-sm" 
-  [ngClass]="{
-    'text-white bg-primary admin': me,
-    'text-dark bg-light': !me
-  }">
-  <p class="mb-0">{{ comment.message }}</p>
-</blockquote>
+<article class="row align-items-center">
+  <div class="col-1"></div>
+
+  <div class="col-10">
+    <blockquote 
+      class="blockquote p-4 my-4 rounded shadow-sm" 
+      [style.fontSize]="size"
+      [ngClass]="{
+        'text-white bg-primary': me,
+        'text-dark bg-light': !me
+      }"
+    >
+      <p class="mb-0">{{ comment.message }}</p>
+    </blockquote>
+  </div>
+
+  <div class="col-1">
+      <a href="#" class="my-4" title="Remove" alt="Remove" *ngIf="removable">
+        <i class="far fa-trash-alt"></i>
+      </a>
+
+      <a href="#" class="my-4" title="Edit" alt="Edit" *ngIf="editable">
+        <i class="fas fa-wrench"></i>
+      </a>
+  </div>
+</article>
