--- a/src/app/shared/comment-form/comment-form.component.html
+++ b/src/app/shared/comment-form/comment-form.component.html
@@ -1,3 +1,43 @@
-<p>
-  comment-form works!
-</p>
+<div class="row">
+  <div class="col-1"></div>
+
+  <div class="col-10">
+    <form *ngIf="!latestAdminComment" #f="ngForm" (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <textarea 
+          name="reply" 
+          id="reply" 
+          class="form-control" 
+          rows="8" 
+          placeholder="Enter Reply..."
+          required
+          minlength="100"
+          [(ngModel)]="comment.message"
+        ></textarea>
+        
+        <div class="invalid-feedback">
+          Reply must be at least 100 characters.
+        </div>
+      </div>
+      <div class="form-group text-right">
+        <button 
+          type="submit" 
+          class="btn btn-success btn-lg d-inline-block mr-2"
+          [disabled]="!f.form.valid"
+        >
+          Save
+        </button>
+    
+        <button 
+          type="button" 
+          class="btn btn-danger btn-lg d-inline-block"
+          (click)="onCancel()"
+        >
+          Cancel
+        </button>
+      </div>
+    </form>
+  </div>
+
+  <div class="col-1"></div>
+</div>
