--- a/src/app/shared/comment-form/comment-form.component.scss
+++ b/src/app/shared/comment-form/comment-form.component.scss
@@ -1,3 +1,14 @@
 :host {
   display: block;
+
+  textarea {
+    height: 15rem;
+  }
+}
+
+:host-context(#reply, #latest) {
+  textarea {
+    height: 17rem;
+    font-size: 1.2rem;
+  }
 }
