Added mobile styles

--- a/src/app/admin/admin-quote/admin-quote.component.html
+++ b/src/app/admin/admin-quote/admin-quote.component.html
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row justify-content-center pb-4">
         <div class="col-12">
-            <h1 class="mt-4">Quote Details</h1>
+            <h1 class="mt-4 text-sm-left text-center">Quote Details</h1>
     
             <hr>
     
@@ -22,7 +22,7 @@
   <div class="container">
     <section id="latest" class="row justify-content-center py-4">
         <div class="col-12">
-          <h3 *ngIf="latestAdminComment || latestUserComment">
+          <h3 *ngIf="latestAdminComment || latestUserComment" class="text-sm-left text-center">
             Latest Messages
           </h3>
       
@@ -70,7 +70,7 @@
   
     <section id="history" class="row justify-content-center pb-4">
       <div class="col-12">
-        <h3>Chat History</h3>
+        <h3 class="text-sm-left text-center">Chat History</h3>
   
         <hr>
   
