--- a/src/app/shared/comment-form/comment-form.component.html
+++ b/src/app/shared/comment-form/comment-form.component.html
@@ -7,9 +7,9 @@
 </div>
 
 <div class="row">
-  <div class="col-1"></div>
+  <div class="col-sm-1"></div>
 
-  <div class="col-10">
+  <div class="col-sm-10">
     <form *ngIf="!latestAdminComment" #f="ngForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <textarea 
@@ -51,5 +51,5 @@
     </form>
   </div>
 
-  <div class="col-1"></div>
+  <div class="col-sm-1"></div>
 </div>
