--- a/src/app/shared/comment/comment.component.scss
+++ b/src/app/shared/comment/comment.component.scss
@@ -1,3 +1,5 @@
+@import '~bootstrap/scss/bootstrap';
+
 :host {
   display: block;
 
@@ -23,5 +25,15 @@
 :host-context(#latest) {
   p {
     font-size: 1.2rem;
+  }
+}
+
+@include media-breakpoint-only(xs) {
+  :host {
+    article {
+      &:hover a {
+        display: none;
+      }
+    }
   }
 }
