--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -1,13 +1,3 @@
-table {
-  table-layout: fixed;
-
-  tr {
-    &:hover {
-      cursor: pointer;
-    }
-
-    td {
-      word-wrap: break-word;
-    }
-  }
+.row {
+  min-height: 100vh;
 }
