--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,37 +1,11 @@
-<div class="container">
-  <div class="row">
-    <table class="table table-striped table-hover col">
-        <thead>
-          <tr>
-            <th scope="col">Email</th>
+<div class="container-fluid d-flex">
+  <div class="row flex-fill">
+    <div class="col-2 bg-light sidebar">
+      <admin-sidebar></admin-sidebar>
+    </div>
 
-            <th scope="col">Status</th>
-
-            <th scope="col">Last Active</th>
-          </tr>
-        </thead>
-      
-        <tbody>
-          <tr 
-            *ngFor="let quote of quotes" 
-            [routerLink]="['quote', quote._id]"
-            [ngClass]="{
-              'table-success': quote.status === 'new',
-              'table-warning': quote.status === 'pending',
-              'table-danger' : quote.status === 'canceled'
-            }"
-          >
-            <td>
-              <a href="mailto:{{ quote.email }}">
-                {{ quote.email }}
-              </a>
-            </td>
-
-            <td>{{ quote.status | titlecase }}</td>
-
-            <td>{{ quote.updatedAt | date:'short' }}</td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="col-10">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
