--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row justify-content-end py-2">
-    <button class="btn btn-primary">
-      Sign in <i class="fas fa-sign-in-alt"></i>
+    <button class="btn btn-primary" routerLink="login">
+      Login <i class="fas fa-sign-in-alt"></i>
     </button>
   </div>
 </div>
