--- a/src/app/core/login/login.component.html
+++ b/src/app/core/login/login.component.html
@@ -5,6 +5,13 @@
     <div class="col-md-6 bg-light p-4 border rounded">
       <h1 class="h3 mb-4 font-weight-normal text-center">Please Sign In</h1>
 
+      <p
+        *ngIf="loginFailed"
+        class="text-danger text-center"
+      >
+        Login failed. Please verify your login credentials.
+      </p>
+
       <form #f="ngForm" [formGroup]="loginForm" (ngSubmit)="onLogin()">
           <div class="form-group">
             <label for="email">Email:</label>
@@ -16,7 +23,12 @@
               class="form-control"
               placeholder="Enter Email"
               formControlName="email"
+              [class.is-invalid]="loginForm.controls['email'].invalid && loginForm.controls['email'].touched"
             >
+
+            <div class="invalid-feedback">
+              Please provide a valid email address.
+            </div>
           </div>
 
           <div class="form-group">
@@ -29,11 +41,16 @@
               class="form-control"
               placeholder="Enter Password"
               formControlName="password"
+              [class.is-invalid]="loginForm.controls['password'].invalid && loginForm.controls['password'].touched"
             >
+
+            <div class="invalid-feedback">
+              Password is required.
+            </div>
           </div>
 
           <button
-            class="btn btn-primary btn-lg btn-block"
+            class="btn btn-primary btn-lg btn-block mt-4"
             [disabled]="!loginForm.valid"
           >
             Login
