--- a/src/app/admin/admin-quote/admin-quote.component.html
+++ b/src/app/admin/admin-quote/admin-quote.component.html
@@ -1,18 +1,18 @@
 <section id="quote" *ngIf="quote">
-  <header class="bg-light border-bottom">
+  <header class="bg-light">
     <div class="container">
       <div class="row justify-content-center pb-4">
         <div class="col-12">
             <h1 class="mt-4 text-sm-left text-center">Quote Details</h1>
-    
+
             <hr>
-    
+
             <p><strong>From:</strong></p>
-    
+
             <p>{{ quote.email }}</p>
-    
+
             <p><strong>Description:</strong></p>
-    
+
             <p>{{ quote.description }}</p>
         </div>
       </div>
@@ -25,66 +25,66 @@
           <h3 *ngIf="latestAdminComment || latestUserComment" class="text-sm-left text-center">
             Latest Messages
           </h3>
-      
+
           <hr>
-          
+
           <div @commentStagger>
-            <comment 
+            <app-comment
                 *ngIf="latestAdminComment"
                 @commentToggle
-                [comment]="latestAdminComment" 
-                [quoteId]="quote._id" 
+                [comment]="latestAdminComment"
+                [quoteId]="quote._id"
                 [me]="latestAdminComment.admin"
                 [editable]="true"
                 [removable]="true"
                 (saved)="onSave($event)"
                 (delete)="onDelete($event)"
               >
-            </comment>
+            </app-comment>
 
-            <comment 
+            <app-comment
               *ngIf="latestUserComment"
               @commentToggle
-              [comment]="latestUserComment" 
-              [quoteId]="quote._id" 
+              [comment]="latestUserComment"
+              [quoteId]="quote._id"
               [me]="latestUserComment.admin"
               (saved)="onSave($event)"
               (delete)="onDelete($event)"
             >
-            </comment>
+            </app-comment>
           </div>
         </div>
     </section><!-- #latest -->
 
-    <section 
-      id="reply" 
+    <section
+      id="reply"
       *ngIf="!latestAdminComment"
     >
-        <comment-form
+        <app-comment-form
           [comment]="comment"
           [quoteId]="quote._id"
           (saved)="onSave($event)"
         >
-        </comment-form>
+        </app-comment-form>
     </section><!-- #reply -->
-  
+
     <section id="history" class="row justify-content-center pb-4">
       <div class="col-12">
         <h3 class="text-sm-left text-center">Chat History</h3>
-  
+
         <hr>
-  
+
         <section id="comments" @commentStagger>
-          <comment 
+          <app-comment
             *ngFor="let comment of comments"
             @commentToggle
             [comment]="comment"
-            [quoteId]="quote._id" 
+            [quoteId]="quote._id"
             [me]="comment.admin"
             (saved)="onSave($event)"
             (delete)="onDelete($event)"
           >
-          </comment>
+          </app-comment>
         </section>
       </div>
     </section><!-- #history -->
