--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid d-flex">
   <div class="row flex-fill">
     <div class="col-2 bg-light sidebar">
-      <admin-sidebar></admin-sidebar>
+      <app-admin-sidebar></app-admin-sidebar>
     </div>
 
     <div class="col-10">
