--- a/src/app/shared/comment/comment.component.html
+++ b/src/app/shared/comment/comment.component.html
@@ -1,6 +1,6 @@
 <div class="row" *ngIf="!editing">
   <div class="col-12">
-    <p 
+    <p
       class="text-center my-2 my-sm-0"
     >
       {{ comment.updatedAt | date: 'short' }}
@@ -12,8 +12,8 @@
   <div class="col-sm-1"></div>
 
   <div class="col-sm-10">
-    <blockquote 
-      class="blockquote p-4 my-1 my-sm-4 rounded shadow-sm" 
+    <blockquote
+      class="blockquote p-4 my-1 my-sm-4 rounded shadow-sm"
       [ngClass]="{
         'text-white bg-primary': me,
         'text-dark bg-light': !me
@@ -24,49 +24,49 @@
   </div>
 
   <div class="col-sm-1">
-      <a 
-        *ngIf="removable" 
+      <a
+        *ngIf="removable"
         (click)="onDelete($event)"
-        href 
-        class="my-4" 
-        title="Remove" 
+        href
+        class="my-4"
+        title="Remove"
         alt="Remove"
       >
         <i class="far fa-trash-alt"></i>
       </a>
 
-      <a 
-        *ngIf="editable" 
+      <a
+        *ngIf="editable"
         (click)="onEdit($event)"
         href
-        class="my-4" 
-        title="Edit" 
+        class="my-4"
+        title="Edit"
         alt="Edit"
       >
         <i class="fas fa-wrench"></i>
       </a>
 
-      <button 
-        *ngIf="editable" 
+      <button
+        *ngIf="editable"
         (click)="onEdit($event)"
         type="button"
-        class="btn btn-lg btn-success mb-1 w-100 d-block d-sm-none" 
-        title="Edit" 
+        class="btn btn-lg btn-success mb-1 w-100 d-block d-sm-none"
+        title="Edit"
         alt="Edit"
       >
-        Edit 
+        Edit
         <i class="fas fa-wrench ml-2"></i>
       </button>
 
-      <button 
-        *ngIf="removable" 
+      <button
+        *ngIf="removable"
         (click)="onDelete($event)"
         type="button"
-        class="btn btn-lg btn-danger mb-4 w-100 d-block d-sm-none" 
-        title="Remove" 
+        class="btn btn-lg btn-danger mb-4 w-100 d-block d-sm-none"
+        title="Remove"
         alt="Remove"
       >
-        Remove 
+        Remove
         <i class="far fa-trash-alt ml-2"></i>
       </button>
   </div>
@@ -74,12 +74,12 @@
 
 <div class="row" *ngIf="editing">
   <div class="col-12">
-      <comment-form 
-      [comment]="comment" 
+      <app-comment-form
+      [comment]="comment"
       [quoteId]="this.quoteId"
       (cancel)="onCancel()"
       (saved)="onSave($event)"
     >
-    </comment-form>
+    </app-comment-form>
   </div>
 </div>
